# django-grow

./: .dockerignore  .flake8  .gitattributes  .gitignore  2  APACHE_AUTH_DEBUG.md  APACHE_AUTH_SETUP.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.dev  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  QUICKSTART.md  README.md  README_APACHE_AUTH.md  _prod_django_env.py  manage.sh  mkenv  package-lock.json  package.json  pages.json  pyproject.toml  requirements.txt  runapache.sh  runserver.sh  update-requirements
.githooks/: post-commit.template
.github/workflows/: codeql.yml
apacheconf/: 000-grow.conf
breeder/: serious-seeds.json
core/: account_adapter.py  admin.py  context_processors.py  models.py  settings.py  urls.py
core/forms/: __init__.py  userforms.py
core/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_id.py
core/templates/core/: a2login.html
core/views/: apache.py  user.py
django_project/: auth_wsgi.py  settings.py  settings_container_prod.py  urls.py  wsgi.py
grow/: apps.py  context_processors.py  enums.py  models.py  paginator.py  settings.py  translatable.py  urls.py
grow/api/: apps.py  enums.py  exceptions.py  settings.py  translatable.py  urls.py  utils.py
grow/api/migrations/: 0001_initial.py  0002_alter_strain_description_type_data.py  0002_import_grow_data.py  0002_rename_key_breeder_slug_alter_strain_name.py  0002_straintranslation.py  0003_rename_grow_log_growlogentry_growlog_and_more.py  0003_rename_key_strain_slug_alter_strain_unique_together.py  0004_strain_is_regular.py
grow/api/models/: __init__.py  growlog.py  location.py  sensors.py  strain.py
grow/api/permission/: generic.py  growlog.py  strain.py
grow/api/utils/: __init__.py  convertions.py  import_export.py
grow/forms/: __init__.py  generic.py  growlog.py  location.py  strain.py
grow/growapi/: apps.py  enums.py  exceptions.py  logging.py  settings.py  signals.py
grow/growapi/migrations/: 0001_initial.py  0002_alter_breeder_breeder_url_and_more.py  0002_remove_strainsinstock_strainsinstock_one_of_regular_feminized_notset.py  0002_rename_ventilation_intesity_growroom_ventilation_intensity_and_more.py  0002_strain_discotinued.py  0003_alter_outdoorlocation_location.py  0003_rename_discotinued_strain_is_discontinued.py  0004_rename_logitude_outdoorlocation_longitude.py  0004_strainimage_caption_alter_strain_is_discontinued.py  0005_alter_outdoorlocation_latitude_and_more.py  0006_remove_growlog_slug.py  0007_alter_growlog_notes_alter_growlog_notes_type_data_and_more.py  0008_alter_growlog_options_alter_growlog_unique_together.py  0009_remove_growlog_germinated_at_growlog_germinating_at_and_more.py  0010_alter_growlogentryimage_description_type_and_more.py  0011_alter_growroom_depth_alter_growroom_height_and_more.py  0012_growlog_updated_at.py  0013_alter_growlogentryimage_description.py  0014_growlogentryimage_caption_and_more.py  0015_alter_growlogentryimage_caption_and_more.py
grow/growapi/models/: __init__.py  growlog.py  (+3 more)
grow/migrations/: 0001_initial.py  0002_alter_usersettings_length_unit.py
grow/templatetags/: grow.py  growlog.py
grow/views/: __init__.py  _base.py  breeder.py  growlog.py  index.py  location.py  seeds_in_stock.py  strain.py  user.py  utils.py
pages/: grow-de-fertilizers-biobizz.bbcode  grow-de-fertilizers.bbcode  grow-de-home.bbcode  grow-fertilizers-biobizz.bbcode  grow-fertilizers.bbcode  grow-home.bbcode  grow-license.bbcode
requirements/: dev.txt  prod-firebird.txt  prod-mysql.txt  prod.txt
staticfiles/css/: grow.css  style.css
staticfiles/scss/: grow.scss
templates/: base.html
templates/account/: login.html
tests/: test_apache_auth.py
(+259 files in other folders)
