[project]
name = "django-grow"
version = "0.0.1"
description = ""
authors = [
    {name = "Christian Moser",email = "christian@cmoser.eu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "django (>=5.2.13,<7.0)",
    "django-allauth[openid,socialaccount] (>=65.14.1,<66.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "markdown (>=3.10,<4.0)",
    "bbcode (>=1.1.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-invitations (>=2.1.0,<3.0.0)",
    "pyJWT (>=2.12.0)",
    "cryptography (>=46.0.7)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-tinywiki @ git+https://github.com/c9moser/django-tinywiki.git",
]

[tool.poetry]
packages = [
    {include = "grow", from = "."}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "django-browser-reload (>=1.21.0,<2.0.0)"
]
postgres = [
    "psycopg2 (>=2.9.11,<3.0.0)"
]
firebird = [
    "django-firebird (>=2.2.2,<3.0.0)"
]

mysql = [
    "mysqlclient (>=2.2.8,<3.0.0)"
]

